fix: make username a little bit more visible

--- a/client/src/components/PostStuff/Comment/Comment.module.scss
+++ b/client/src/components/PostStuff/Comment/Comment.module.scss
@@ -34,8 +34,8 @@
             }
              &__username {
                  font-size: 11px;
-                 font-weight: 300;
-                 color: #888;
+                 font-weight: 500;
+                 color: #838383;
              }
 
             span {
